# RAG-practice

./: .gitignore  embeddding-test.py  pyproject.toml  test_doc.txt
.claude/: settings.local.json
test/: qwen3_vl_embedding_test.py
tutorials/: ROADMAP.md
tutorials/01-naive-rag/: step0-overview.md  step1-chunking.md  step2-embedding.md  step3-vectordb.md  step4-rag-complete.md
tutorials/02-advanced-rag/: step0-naive-rag-limits.md  step1-semantic-chunking.md  step2-query-transformation.md  step3-reranking.md  step4-hybrid-search.md  step5-integrated-pipeline.md
tutorials/03-knowledge-graph/: step1-node-edge-triple.md  step2-neo4j-cypher.md  step3-news-graph.md
tutorials/04-graph-rag/: step1-concept.md  step2-global-search.md  step3-integrated-pipeline.md  step4-final-comparison.md
