[project]
name = "rag-practice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "pillow>=12.1.1",
    "qwen-vl-utils>=0.0.14",
    "sentence-transformers>=5.2.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
