[project]
name = "rag-workspace"
version = "0.1.0"
description = "RAG workspace root"
requires-python = ">=3.10"
dependencies = []
[tool.uv.workspace]
members = ["packages/*"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
